// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostUsedLocationButtons should render one button 1`] = `
<div
  class="space-y-2"
>
  
  <button
    class="btn whitespace-nowrap block"
  >
    
    Argentina
    
  </button>
  
</div>
`;

exports[`MostUsedLocationButtons should render three buttons 1`] = `
<div
  class="space-y-2"
>
  
  <button
    class="btn whitespace-nowrap block"
  >
    
    Sweden
    
  </button>
  <button
    class="btn whitespace-nowrap block"
  >
    
    Norway
    
  </button>
  <button
    class="btn whitespace-nowrap block"
  >
    
    Iceland
    
  </button>
  
</div>
`;
